login: html: Remove bare signup route.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                         </mat-error>
                     </mat-form-field>
                     <div style="margin-bottom: 20px;" *ngIf="submitted && !userExistsFlag">
-                        <strong style="color: red;">Account does not exist. Enter a different email or <a [routerLinkActive]="'active'" [routerLink]="['/signup']">get a new account</a>.</strong>
+                        <strong style="color: red;">Account does not exist.</strong>
                     </div>
                 </div>
             </div>
